<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WanAndroid-WJX</string>
    <string name="confirm">确定</string>
    <string name="topsearch">搜索</string>
    <string name="done">确定</string>
    <string name="cancel">取消</string>
    <string name="title">温馨提示</string>
    <string name="bottomname1">首页</string>
    <string name="bottomname2">项目</string>
    <string name="bottomname3">广场</string>
    <string name="bottomname4">公众号</string>
    <string name="bottomname5">我的</string>
    <string name="article_author">作者：%1$s</string>
    <string name="article_category">分类：%1$s/%2$s</string>
    <string name="collect_category">分类：%1$s</string>
    <string name="anonymous_user">匿名用户</string>
    <string name="search_hint">搜索</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="open_it_with_system_browser">使用系统浏览器打开</string>
    <string name="app_title_url">%1$s 分享的【%2$s】戳此链接查看☞：%3$s</string>

    <!-- 异常页面-->
    <string name="network_error">内容加载失败，请检查网络设置</string>
    <string name="error_refresh">重新加载</string>
    <string name="complete_info">请完善信息</string>
    <string name="register">注册</string>
    <string name="password_not_match">两次输入的密码不一致</string>
    <string name="register_success">注册成功</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>
    <string name="input_repassword">请确认密码</string>
    <string name="integral_rank">积分排行</string>
    <string name="help">帮助</string>
    <string name="add">添加</string>
    <string name="integral_rule">积分规则</string>
    <string name="collect_page">我的收藏</string>
    <string name="search_result">搜索结果</string>
    <string name="me_share">我的分享</string>
    <string name="todo_page">待办清单</string>
    <string name="add_todo">添加待办</string>
    <string name="edit_todo">编辑待办</string>
    <string name="todo_work">工作</string>
    <string name="todo_study">学习</string>
    <string name="todo_piority_important">重要</string>
    <string name="todo_piority_normal">非紧急</string>
    <!--设置页面-->
    <string name="setting">设置</string>
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">版本</string>
    <string name="setting_exit">退出</string>
    <string name="night_mode">夜间模式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_success">清理成功</string>
    <string name="setting_mode">列表动画</string>
    <string name="setting_modetip">无</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_tip"></string>
    <string name="copyright_summary">仅作个人学习及非商业用途</string>
    <string name="auther">作者</string>
    <string name="auther_name">WjxBless</string>
    <string name="project_address">项目源码</string>
    <string name="github_url">https://github.com/wangjianxiandev/WanAndroidMvp</string>
    <string name="open_project">开源项目</string>
    <string name="open_project_tips">项目中开源库</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">设置App的主题颜色</string>
    <string name="author_link_empty">不能为空</string>
    <string name="share_article">分享文章</string>
</resources>
